--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,20 +97,22 @@ footer a:hover { text-decoration: underline; }
 <script>
 let model, talking=false, greeted=false;
 let lastTranscript = "";
-let hmNeigen = false, hmStartTime = 0;
+let hmNeigen = false;
+let hmStartTime = 0;
 const hmDuration = 4000;
-let hmStartRotX = 0, hmStartRotY = 0;
+let hmStartRotX = 0;
+let hmStartRotY = 0;
 
-let rising = false, riseStartTime = 0;
+let rising = false;
+let riseStartTime = 0;
 const riseDuration = 1200;
 let hmStarted = false;
 
-// Ausgangsposition leicht nach rechts geneigt
-let baseRotY = -0.25;
-let baseRotX = 0.25;
+const baseRotY = 0.1;  // Ausgang leicht nach rechts geneigt
+const baseRotX = 0.25;
 let targetRotY = baseRotY;
 let targetRotX = baseRotX;
-let baseY = 0;
+const baseY = 0;
 
 const scene = new THREE.Scene();
 const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
@@ -120,12 +122,12 @@ renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
 renderer.setClearColor(0x000000);
 
-// Korrektes Licht für goldenen Avatar
-const directionalLight = new THREE.DirectionalLight(0xffffff,1.5);
-directionalLight.position.set(1,1,2);
-scene.add(directionalLight);
+// Korrektes Licht für Goldmaterial
+const dirLight = new THREE.DirectionalLight(0xffffff, 1.5);
+dirLight.position.set(1,1,2);
+scene.add(dirLight);
 scene.add(new THREE.AmbientLight(0xffffff,0.6));
-const frontLight = new THREE.PointLight(0xffffff,0.8);
+const frontLight = new THREE.PointLight(0xffffff,0.6);
 frontLight.position.set(0,0.5,2);
 scene.add(frontLight);
 
@@ -154,57 +156,55 @@ loader.load("./avatar.glb", gltf=>{
 function animate(){
   requestAnimationFrame(animate);
   if(model){
-    const tNow = performance.now();
+    const tNow = Date.now();
 
-    // Aufrichten nach Begrüßung
+    // Aufrichten während Antwort
     if(rising){
-      const t = (tNow - riseStartTime) / riseDuration;
-      const easeT = t < 0 ? 0 : (t>1 ? 1 : (-Math.cos(Math.PI*t)/2 + 0.5));
-      model.rotation.y = baseRotY + (0 - baseRotY)*easeT;
-      model.rotation.x = baseRotX + (0 - baseRotX)*easeT;
-      if(t >=1) rising = false;
+      const t = (performance.now() - riseStartTime) / riseDuration;
+      const easeT = t < 0 ? 0 : (t > 1 ? 1 : (-Math.cos(Math.PI * t)/2 + 0.5));
+      targetRotY = baseRotY * (1 - easeT);
+      targetRotX = baseRotX * (1 - easeT);
+      if(t >= 1) rising = false;
     }
 
-    // Hm-Phase: leicht nach links neigen
+    // "Hmmmm...Moment" Neigen nach links
     if(hmNeigen){
-      const t = (tNow - hmStartTime) / hmDuration;
-      const targetX = baseRotX;
-      const targetY = baseRotY - 0.15; // leicht links
+      const t = (performance.now() - hmStartTime) / hmDuration;
       if(t>=1){
-        model.rotation.x = targetX;
-        model.rotation.y = targetY;
         hmNeigen=false;
+        model.rotation.x = hmStartRotX + 0.25;
+        model.rotation.y = hmStartRotY - 0.1; 
       } else {
-        model.rotation.x = THREE.MathUtils.lerp(hmStartRotX, targetX, t);
-        model.rotation.y = THREE.MathUtils.lerp(hmStartRotY, targetY, t);
+        model.rotation.x = hmStartRotX + 0.25 * t;
+        model.rotation.y = hmStartRotY - 0.1 * t;
       }
     }
 
-    // Talking Animation mit Atmung und kleiner Kopfbewegung
-    const t = Date.now();
-    const breathe = Math.sin(t*0.0015)*0.008 + Math.sin(t*0.0007)*0.004;
-    model.position.y = baseY + breathe;
+    // Talking + natürliche Atmung
+    if(talking){
+      const breathe = Math.sin(tNow*0.0015)*0.008 + Math.sin(tNow*0.0007)*0.004;
+      model.position.y = baseY + breathe;
 
-    const swayY = Math.sin(t*0.0012)*0.02 + Math.sin(t*0.0023)*0.01;
-    const swayX = Math.sin(t*0.0017)*0.015 + Math.sin(t*0.0021)*0.008;
-    const swayZ = Math.sin(t*0.0015)*0.004;
+      const swayY = Math.sin(tNow*0.0012)*0.02 + Math.sin(tNow*0.0023)*0.01;
+      const swayX = Math.sin(tNow*0.0017)*0.015 + Math.sin(tNow*0.0021)*0.008;
+      const swayZ = Math.sin(tNow*0.0015)*0.004;
 
-    if(talking && !hmNeigen){
-      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, 0, 0.04); // frontal während Antwort
-      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.04);
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY + swayY, 0.08);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + swayX, 0.08);
       model.rotation.z = swayZ;
-    } else if(!hmNeigen && !rising){
+    } else if(!hmNeigen){
+      // Rückkehr auf Ausgangsposition
       model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY, 0.02);
       model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.02);
-      model.rotation.z = THREE.MathUtils.lerp(model.rotation.z||0, 0, 0.02);
+      model.rotation.z = THREE.MathUtils.lerp(model.rotation.z || 0, 0, 0.02);
+      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.02);
     }
-
   }
   renderer.render(scene,camera);
 }
 
 window.addEventListener("resize", ()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
+  camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(window.innerWidth,window.innerHeight);
 });
@@ -219,50 +219,50 @@ if("webkitSpeechRecognition" in window){
   recognition.continuous=false;
   recognition.interimResults=false;
 
-  recognition.onresult = (event)=>{
+  recognition.onresult = (event) => {
     lastTranscript = event.results[0][0].transcript;
     console.log("🎙️ Gesprochen:", lastTranscript);
   };
 
-  recognition.onend = ()=>{
-    micBtn.style.background="#222";
-    recognizing=false;
+  recognition.onend = () => {
+    micBtn.style.background = "#222";
+    recognizing = false;
 
     if(lastTranscript && !hmStarted){
-      hmStarted=true;
-      hmNeigen=true;
-      hmStartTime=performance.now();
-      hmStartRotX=model.rotation.x;
-      hmStartRotY=model.rotation.y;
-
-      speak("Hmmmm… einen Moment", true);
+      hmStarted = true;
+      hmNeigen = true;
+      hmStartTime = performance.now();
+      hmStartRotX = model.rotation.x;
+      hmStartRotY = model.rotation.y;
+      speak("Hmmmmmm… einen Moment", true); 
 
       fetch("/ask", {
         method:"POST",
         headers:{"Content-Type":"application/json"},
         body: JSON.stringify({text:lastTranscript})
       })
-      .then(resp=>resp.json())
-      .then(data=>{
-        rising=true;
-        riseStartTime=performance.now();
-        speak(data.answer, false);
+      .then(resp => resp.json())
+      .then(data => {
+        rising = true;
+        riseStartTime = performance.now();
+        speak(data.answer);
 
         setTimeout(()=>{
-          hmNeigen=false;
-          rising=false;
+          // Rückkehr auf Ausgangsposition leicht nach rechts geneigt
+          targetRotY = baseRotY;
+          targetRotX = baseRotX;
+          hmStarted=false;
           lastTranscript="";
         }, 500);
       })
-      .catch(e=>console.error("Fehler bei /ask:",e));
+      .catch(e => console.error("Fehler bei /ask:", e));
     }
   };
-
-} else {
+}else{
   micNotice.textContent="🎤 Sprachsteuerung wird im Browser nicht unterstützt. Bitte Chrome/Edge nutzen.";
 }
 
-let maleVoice=null;
+let maleVoice = null;
 function loadVoices(){
   const voices = speechSynthesis.getVoices();
   maleVoice = voices.find(v=>/male|mann|stefan|markus/i.test(v.name)) ||
@@ -278,32 +278,32 @@ function speak(text, slow=false){
   utter.lang="de-DE";
   utter.rate = slow ? 0.4 : 0.95;
   utter.pitch = 0.6;
-  utter.voice=maleVoice;
-  utter.volume=0.6;
+  utter.voice = maleVoice;
+  utter.volume = 0.6;
   utter.onstart=()=>{ talking=true; };
   utter.onend=()=>{ talking=false; };
   speechSynthesis.speak(utter);
 }
 
-micBtn.onclick = ()=>{
+micBtn.onclick = () => {
   if(!recognition) return;
 
   if(!greeted){
-    greeted=true;
-    rising=true;
-    riseStartTime=performance.now();
+    greeted = true;
+    rising = true;
+    riseStartTime = performance.now();
     speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
     return;
   }
 
   if(!recognizing){
     recognition.start();
-    micBtn.style.background="#555";
-    recognizing=true;
+    micBtn.style.background = "#555";
+    recognizing = true;
     hmStarted=false;
   } else {
     recognition.stop();
-    micBtn.style.background="#222";
+    micBtn.style.background = "#222";
     recognizing=false;
   }
 };
