--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,84 +1,22 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<link rel="icon" href="avatar.png" type="image/png">
-<link rel="apple-touch-icon" href="avatar.png">
-<meta name="theme-color" content="#000000">
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Frag Friedrich Barbarossa</title>
+<link rel="icon" href="avatar.png" type="image/png">
 <style>
-body {
-  margin: 0;
-  overflow: hidden;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  flex-direction: column;
-  font-family: "Georgia", serif;
-  color: white;
-}
-h1 {
-  position: absolute;
-  top: 20px;
-  text-align: center;
-  width: 100%;
-  font-size: 2em;
-  color: #e0b36b;
-  text-shadow: 0 0 10px #000;
-  letter-spacing: 2px;
-  animation: pulse 3s ease-in-out infinite;
-}
-@keyframes pulse {
-  0%,100% { transform: scale(1); opacity:1; }
-  50% { transform: scale(1.05); opacity:0.9; }
-}
-#avatarCanvas { width: 100%; height: 100%; display: block; }
-#loading {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  color: #ccc;
-  font-size: 1.2em;
-  text-align: center;
-}
-#micBtn {
-  position: absolute;
-  bottom: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  background: #222;
-  color: white;
-  border: none;
-  font-size: 32px;
-  cursor: pointer;
-  z-index: 10;
-}
-#micBtn:hover { background:#444; }
-#micNotice {
-  position: absolute;
-  bottom: 140px;
-  width: 100%;
-  text-align: center;
-  color: #aaa;
-  font-size: 0.9em;
-}
-footer {
-  position: absolute;
-  bottom: 15px;
-  width: 100%;
-  text-align: center;
-  font-size: 0.8em;
-  color: #aaa;
-}
+body { margin:0; overflow:hidden; background:black; font-family:"Georgia", serif; color:white; }
+h1 { position:absolute; top:20px; width:100%; text-align:center; font-size:2em; color:#e0b36b; text-shadow:0 0 10px #000; letter-spacing:2px; animation:pulse 3s ease-in-out infinite;}
+@keyframes pulse { 0%,100%{transform:scale(1);opacity:1;} 50%{transform:scale(1.05);opacity:0.9;} }
+#avatarCanvas { width:100%; height:100%; display:block; }
+#loading { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); color:#ccc; font-size:1.2em; text-align:center;}
+#micBtn { position:absolute; bottom:60px; left:50%; transform:translateX(-50%); width:80px; height:80px; border-radius:50%; background:#222; color:white; border:none; font-size:32px; cursor:pointer; z-index:10;}
+#micBtn:hover{background:#444;}
+#micNotice { position:absolute; bottom:140px; width:100%; text-align:center; color:#aaa; font-size:0.9em;}
+footer { position:absolute; bottom:15px; width:100%; text-align:center; font-size:0.8em; color:#aaa;}
 footer a { color:#aaa; text-decoration:none; }
-footer a:hover { text-decoration: underline; }
+footer a:hover { text-decoration:underline; }
 </style>
 </head>
 <body>
@@ -87,47 +25,34 @@ footer a:hover { text-decoration: underline; }
 <canvas id="avatarCanvas"></canvas>
 <button id="micBtn">🎤</button>
 <div id="micNotice"></div>
-<footer>
-© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
-</footer>
+<footer>© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a></footer>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
-let model, talking=false;
-let lastTranscript = "";
-let hmNeigen = false;
-let hmStartTime = 0;
-const hmDuration = 4000;
-let hmStartRotX = 0;
-let hmStartRotY = 0;
-
-let rising = false;
-let riseStartTime = 0;
-const riseDuration = 1200;
-
-let greeted = false;
-
-let baseRotY = 0.15;  // Ausgang leicht nach rechts
-let baseRotX = 0;
-let targetRotY = baseRotY;
-let targetRotX = baseRotX;
-let baseY = 0;
+let model, talking=false, greeted=false, lastTranscript="";
+let hmPhase=false, hmStartTime=0;
+let baseRotX=0.25, baseRotY=0.05; // Ausgangsposition: leicht nach rechts geneigt frontal
+let targetRotX=baseRotX, targetRotY=baseRotY;
+let rising=false, riseStartTime=0, riseDuration=1200;
+let hmDuration=4000;
+let hmStartRotX=0, hmStartRotY=0;
+let baseY=0;
 
 const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
+const camera = new THREE.PerspectiveCamera(30,window.innerWidth/window.innerHeight,0.1,1000);
 camera.position.set(0,0,2.8);
-const renderer = new THREE.WebGLRenderer({canvas: document.getElementById("avatarCanvas"), antialias:true});
-renderer.setSize(window.innerWidth, window.innerHeight);
+const renderer = new THREE.WebGLRenderer({canvas:document.getElementById("avatarCanvas"),antialias:true});
+renderer.setSize(window.innerWidth,window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
 renderer.setClearColor(0x000000);
 
-// Licht unverändert, goldenes Material korrekt beleuchtet
-const directionalLight = new THREE.DirectionalLight(0xffffff, 1.8);
-directionalLight.position.set(1,1,2);
-scene.add(directionalLight);
-scene.add(new THREE.AmbientLight(0xffffff,0.8));
+// Licht korrekt für Goldmaterial
+const dirLight = new THREE.DirectionalLight(0xffffff,1.5);
+dirLight.position.set(1,1,2);
+scene.add(dirLight);
+scene.add(new THREE.AmbientLight(0xffffff,0.5));
 const frontLight = new THREE.PointLight(0xffffff,0.8);
 frontLight.position.set(0,0.5,2);
 scene.add(frontLight);
@@ -136,166 +61,145 @@ const loader = new THREE.GLTFLoader();
 const loadingText = document.getElementById("loading");
 
 loader.load("./avatar.glb", gltf=>{
-  model = gltf.scene;
-  const box = new THREE.Box3().setFromObject(model);
-  const size = box.getSize(new THREE.Vector3());
-  const maxDim = Math.max(size.x,size.y,size.z);
-  let scaleFactor = (1.5 / maxDim) * 0.8;
-  model.scale.set(scaleFactor, scaleFactor, scaleFactor);
-  const center = box.getCenter(new THREE.Vector3());
-  model.position.sub(center);
-  model.rotation.y = baseRotY;
-  model.rotation.x = baseRotX;
-  scene.add(model);
-  loadingText.style.display="none";
-  animate();
-}, undefined, err=>{
-  console.error("Fehler beim Laden des Modells:",err);
-  loadingText.textContent="Fehler beim Laden des Avatars.";
+    model = gltf.scene;
+    const box = new THREE.Box3().setFromObject(model);
+    const size = box.getSize(new THREE.Vector3());
+    const maxDim = Math.max(size.x,size.y,size.z);
+    let scaleFactor = (1.5/maxDim)*0.8;
+    model.scale.set(scaleFactor,scaleFactor,scaleFactor);
+    const center = box.getCenter(new THREE.Vector3());
+    model.position.sub(center);
+    model.rotation.x = baseRotX;
+    model.rotation.y = baseRotY;
+    scene.add(model);
+    loadingText.style.display="none";
+    animate();
+},undefined,err=>{
+    console.error("Fehler beim Laden:",err);
+    loadingText.textContent="Fehler beim Laden des Avatars.";
 });
 
 function animate(){
-  requestAnimationFrame(animate);
-  if(!model) return;
+    requestAnimationFrame(animate);
+    if(model){
+        const t = Date.now();
+        const breathe = Math.sin(t*0.0015)*0.008 + Math.sin(t*0.0007)*0.004;
+        model.position.y = baseY + breathe;
 
-  const t = Date.now();
-
-  // Hm-Neigephase
-  if(hmNeigen){
-    const elapsed = (t - hmStartTime)/hmDuration;
-    if(elapsed >= 1){
-      hmNeigen = false;
-      model.rotation.x = hmStartRotX + 0.1; // leicht nach links
-      model.rotation.y = hmStartRotY - 0.1;
-    } else {
-      model.rotation.x = hmStartRotX + 0.1*elapsed;
-      model.rotation.y = hmStartRotY - 0.1*elapsed;
+        // Aufrichten bei Begrüßung/Antwort
+        if(rising){
+            const tr = (performance.now()-riseStartTime)/riseDuration;
+            const easeT = tr<0?0:(tr>1?1:(-Math.cos(Math.PI*tr)/2+0.5));
+            model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.08);
+            model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY, 0.08);
+            if(tr>=1) rising=false;
+        } 
+        // Hmmm-Phase
+        else if(hmPhase){
+            const th = (performance.now()-hmStartTime)/hmDuration;
+            if(th>=1){ hmPhase=false; model.rotation.x = hmStartRotX; model.rotation.y = hmStartRotY;}
+            else{
+                model.rotation.x = hmStartRotX + 0.05*th;  // leichte Neigung nach links
+                model.rotation.y = hmStartRotY - 0.05*th;
+            }
+        } 
+        // Idle frontal geneigt
+        else{
+            model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX,0.02);
+            model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY,0.02);
+        }
     }
-  }
-
-  // Talking / Aufrichten
-  if(talking){
-    const breathe = Math.sin(t*0.0015)*0.008 + Math.sin(t*0.0007)*0.004;
-    model.position.y = baseY + breathe;
-
-    // Langsam auf frontal während Antwort
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, 0, 0.02);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.02);
-  } else if(!hmNeigen){
-    // Ausgangsposition leicht rechts geneigt
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY, 0.02);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.02);
-    model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.02);
-  }
-
-  renderer.render(scene,camera);
+    renderer.render(scene,camera);
 }
 
-window.addEventListener("resize", ()=>{
-  camera.aspect=window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth,window.innerHeight);
+window.addEventListener("resize",()=>{
+    camera.aspect=window.innerWidth/window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth,window.innerHeight);
 });
 
+// Mikrofon & Sprachausgabe
 const micBtn = document.getElementById("micBtn");
 const micNotice = document.getElementById("micNotice");
 let recognizing=false, recognition;
 
 if("webkitSpeechRecognition" in window){
-  recognition = new webkitSpeechRecognition();
-  recognition.lang="de-DE";
-  recognition.continuous=false;
-  recognition.interimResults=false;
+    recognition = new webkitSpeechRecognition();
+    recognition.lang="de-DE";
+    recognition.continuous=false;
+    recognition.interimResults=false;
 
-  recognition.onresult = (event) => {
-    lastTranscript = event.results[0][0].transcript;
-    console.log("🎙️ Gesprochen:", lastTranscript);
-  };
+    recognition.onresult = (event)=>{ lastTranscript = event.results[0][0].transcript; console.log("🎙️ Gesprochen:",lastTranscript);}
+    recognition.onend = ()=>{
+        micBtn.style.background="#222";
+        recognizing=false;
+        if(lastTranscript && !hmPhase){
+            hmPhase=true;
+            hmStartTime=performance.now();
+            hmStartRotX=model.rotation.x;
+            hmStartRotY=model.rotation.y;
+            speak("Hmmmmmm… einen Moment",true);
 
-  recognition.onend = () => {
-    micBtn.style.background = "#222";
-    recognizing = false;
+            fetch("/ask",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({text:lastTranscript})})
+            .then(resp=>resp.json())
+            .then(data=>{
+                // Begin Antwort: langsam frontal
+                targetRotX=0; targetRotY=0;
+                rising=true;
+                riseStartTime=performance.now();
+                speak(data.answer);
 
-    if(lastTranscript){
-      hmNeigen = true;
-      hmStartTime = performance.now();
-      hmStartRotX = model.rotation.x;
-      hmStartRotY = model.rotation.y;
-      speak("Hmmmm… einen Moment", true);
+                // Nach Ende Antwort: zurück Ausgangsposition
+                const checkEnd = setInterval(()=>{
+                    if(!talking){
+                        rising=true;
+                        riseStartTime=performance.now();
+                        targetRotX=baseRotX;
+                        targetRotY=baseRotY;
+                        clearInterval(checkEnd);
+                    }
+                },100);
+            }).catch(e=>console.error(e));
+            lastTranscript="";
+        }
+    };
+}else{ micNotice.textContent="🎤 Sprachsteuerung im Browser nicht unterstützt. Bitte Chrome/Edge nutzen."; }
 
-      fetch("/ask", {
-        method:"POST",
-        headers:{"Content-Type":"application/json"},
-        body: JSON.stringify({text:lastTranscript})
-      })
-      .then(resp => resp.json())
-      .then(data => {
-        // Antwortphase starten
-        talking = true;
-        speak(data.answer);
-
-        // Nach Ende Antwort: Ausgangsposition und greeted zurücksetzen
-        const resetAfterAnswer = () => {
-          talking = false;
-          hmNeigen = false;
-          targetRotY = baseRotY;
-          targetRotX = baseRotX;
-          greeted = false;
-          lastTranscript = "";
-        };
-        setTimeout(resetAfterAnswer, data.answer.length*80 + 1000); // ungefähr Dauer
-      })
-      .catch(e => console.error("Fehler bei /ask:", e));
-    }
-  };
-}else{
-  micNotice.textContent="🎤 Sprachsteuerung wird im Browser nicht unterstützt. Bitte Chrome/Edge nutzen.";
-}
-
-let maleVoice = null;
+let maleVoice=null;
 function loadVoices(){
-  const voices = speechSynthesis.getVoices();
-  maleVoice = voices.find(v=>/male|mann|stefan|markus/i.test(v.name)) ||
-              voices.find(v=>v.lang.startsWith("de")) ||
-              voices[0]||null;
+    const voices = speechSynthesis.getVoices();
+    maleVoice = voices.find(v=>/male|mann|stefan|markus/i.test(v.name)) || voices.find(v=>v.lang.startsWith("de")) || voices[0]||null;
 }
-speechSynthesis.onvoiceschanged = loadVoices;
+speechSynthesis.onvoiceschanged=loadVoices;
 loadVoices();
 
-function speak(text, slow=false){
-  if(!text || !maleVoice) return;
-  const utter = new SpeechSynthesisUtterance(text);
-  utter.lang="de-DE";
-  utter.rate = slow ? 0.4 : 0.95;
-  utter.pitch = 0.6;
-  utter.voice = maleVoice;
-  utter.volume = 0.6;
-  utter.onstart = ()=>{ talking=true; };
-  utter.onend = ()=>{ talking=false; };
-  speechSynthesis.speak(utter);
+function speak(text,slow=false){
+    if(!text||!maleVoice) return;
+    const utter=new SpeechSynthesisUtterance(text);
+    utter.lang="de-DE";
+    utter.rate=slow?0.4:0.95;
+    utter.pitch=0.6;
+    utter.voice=maleVoice;
+    utter.volume=0.6;
+    utter.onstart=()=>{talking=true;};
+    utter.onend=()=>{talking=false;};
+    speechSynthesis.speak(utter);
 }
 
-micBtn.onclick = () => {
-  if(!recognition) return;
-
-  if(!greeted){
-    greeted = true;
-    rising = true;
-    riseStartTime = performance.now();
-    // Begrüßung auslösen
-    speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
-    return;
-  }
-
-  if(!recognizing){
-    recognition.start();
-    micBtn.style.background = "#555";
-    recognizing = true;
-  } else {
-    recognition.stop();
-    micBtn.style.background = "#222";
-    recognizing = false;
-  }
+// Mikrofon-Tipp Ablauf
+micBtn.onclick=()=>{
+    if(!recognition) return;
+    if(!greeted){
+        greeted=true;
+        // Begrüßung frontal
+        targetRotX=0; targetRotY=0;
+        rising=true;
+        riseStartTime=performance.now();
+        speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
+        return;
+    }
+    if(!recognizing){ recognition.start(); micBtn.style.background="#555"; recognizing=true; }
+    else { recognition.stop(); micBtn.style.background="#222"; recognizing=false; }
 };
 </script>
 </body>
